Fix images not centered

--- a/api/src/reportcreator_api/tasks/rendering/global_assets/base-text.scss
+++ b/api/src/reportcreator_api/tasks/rendering/global_assets/base-text.scss
@@ -51,6 +51,8 @@ figcaption {
 img {
   max-width: 100%;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
